name:                sunhypnotic-server
version:             0.1.0.0
synopsis:            JSON server for SunHypnotic release data
description:         Please see README.md
homepage:            http://github.com/accraze/sunhypnotic-server
license:             MIT
license-file:        LICENSE
author:              accraze
maintainer:          accraze@gmail.com
copyright:           2016 accraze
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable sunhypnotic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , scotty
                       , aeson
